tests/baselines/reference/superCallBeforeThisAccessing7.errors.txt
superCallBeforeThisAccessing7.ts(8,16): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== superCallBeforeThisAccessing7.ts (1 errors) ====
    class Base {
        constructor(c) { }
    }
    class D extends Base {
        private _t;
        constructor() {
            let x = {
                j: this._t,
                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            }
            super(undefined);
        }
    }
    